--- a/index.html
+++ b/index.html
@@ -110,98 +110,98 @@
             </ul>
         </div>
     </div>
-    <div class="tab-content" id="pills-tabContent">
-        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab"
-            tabindex="0">
-            <!-- tercera columna para grid de 3 imagenes por columna -->
-            <div class="container-fluid text-center">
-                <div class="row">
-                    <div class="col my-2">
-                        <img src="https://picsum.photos/400/400">
-                    </div>
-                    <div class="col my-2">
-                        <img src="https://picsum.photos/400/400">
-                    </div>
-                    <div class="col my-2">
-                        <img src="https://picsum.photos/400/400">
-                    </div>
+    <!-- <div class="tab-content" id="pills-tabContent"> -->
+    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab"
+        tabindex="0">
+        <!-- tercera columna para grid de 3 imagenes por columna -->
+        <div class="container-fluid text-center">
+            <div class="row">
+                <div class="col my-2">
+                    <img src="https://picsum.photos/400/400">
                 </div>
-                <div class="row">
-                    <div class="col my-2">
-                        <img src="https://picsum.photos/400/400">
-                    </div>
-                    <div class="col my-2">
-                        <img src="https://picsum.photos/400/400">
-                    </div>
-                    <div class="col my-2">
-                        <img src="https://picsum.photos/400/400">
-                    </div>
+                <div class="col my-2">
+                    <img src="https://picsum.photos/400/400">
                 </div>
-                <div class="row">
-                    <div class="col my-2">
-                        <img src="https://picsum.photos/400/400">
-                    </div>
-                    <div class="col my-2">
-                        <img src="https://picsum.photos/400/400">
-                    </div>
-                    <div class="col my-2">
-                        <img src="https://picsum.photos/400/400">
-                    </div>
+                <div class="col my-2">
+                    <img src="https://picsum.photos/400/400">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col my-2">
+                    <img src="https://picsum.photos/400/400">
+                </div>
+                <div class="col my-2">
+                    <img src="https://picsum.photos/400/400">
+                </div>
+                <div class="col my-2">
+                    <img src="https://picsum.photos/400/400">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col my-2">
+                    <img src="https://picsum.photos/400/400">
+                </div>
+                <div class="col my-2">
+                    <img src="https://picsum.photos/400/400">
+                </div>
+                <div class="col my-2">
+                    <img src="https://picsum.photos/400/400">
                 </div>
             </div>
         </div>
-        <!-- Cuarta columna para grid de 1 imagenes por columna -->
-        <div class="container-fluid d-flex justify-content-center align-items-center"
-            style="min-height: 100vh; margin-top: 8px;">
-            <div class="row d-flex flex-column align-items-center">
-                <div class="col mb-4">
-                    <div class="card" style="width: 30rem;">
-                        <div class="card-body d-flex justify-content-between align-items-center">
-                            <h5 class="card-title">My Crazy dog Spark!</h5>
-                            <span class="card-title-right">08/26</span> <!-- Texto a la derecha -->
-                        </div>
-                        <img src="https://picsum.photos/400/400" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <strong>
-                                <p class="card-text fs-6">204 Likes</p>
-                            </strong>
-                            <p class="card-text">This is an example of a very good photo that you can post on
-                                instagram.</p>
-                        </div>
+    </div>
+    <!-- Cuarta columna para grid de 1 imagenes por columna -->
+    <div class="container-fluid d-flex justify-content-center align-items-center"
+        style="min-height: 100vh; margin-top: 8px;">
+        <div class="row d-flex flex-column align-items-center">
+            <div class="col mb-4">
+                <div class="card" style="width: 30rem;">
+                    <div class="card-body d-flex justify-content-between align-items-center">
+                        <h5 class="card-title">My Crazy dog Spark!</h5>
+                        <span class="card-title-right">08/26</span> <!-- Texto a la derecha -->
+                    </div>
+                    <img src="https://picsum.photos/400/400" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <strong>
+                            <p class="card-text fs-6">204 Likes</p>
+                        </strong>
+                        <p class="card-text">This is an example of a very good photo that you can post on
+                            instagram.</p>
                     </div>
                 </div>
-                <div class="col mb-4">
-                    <div class="card" style="width: 30rem;">
-                        <div class="card-body d-flex justify-content-between align-items-center">
-                            <h5 class="card-title">The greatness of Croatia</h5>
-                            <span class="card-title-right">04/09</span> <!-- Texto a la derecha -->
-                        </div>
-                        <img src="https://picsum.photos/400/400" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <strong>
-                                <p class="card-text fs-6">26985 Likes</p>
-                            </strong>
-                            <p class="card-text">This is an example of a very good photo that you can post on
-                                instagram.</p>
-                        </div>
+            </div>
+            <div class="col mb-4">
+                <div class="card" style="width: 30rem;">
+                    <div class="card-body d-flex justify-content-between align-items-center">
+                        <h5 class="card-title">The greatness of Croatia</h5>
+                        <span class="card-title-right">04/09</span> <!-- Texto a la derecha -->
+                    </div>
+                    <img src="https://picsum.photos/400/400" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <strong>
+                            <p class="card-text fs-6">26985 Likes</p>
+                        </strong>
+                        <p class="card-text">This is an example of a very good photo that you can post on
+                            instagram.</p>
                     </div>
                 </div>
-                <div class="col mb-4">
-                    <div class="card" style="width: 30rem;">
-                        <div class="card-body d-flex justify-content-between align-items-center">
-                            <h5 class="card-title">Amazing GOAL by Cristiano!</h5>
-                            <span class="card-title-right">06/10</span> <!-- Texto a la derecha -->
-                        </div>
-                        <img src="https://picsum.photos/400/400" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <strong>
-                                <p class="card-text fs-6">350 Likes</p>
-                            </strong>
-                            <p class="card-text">This is an example of a very good photo that you can post on
-                                instagram.</p>
-                        </div>
+            </div>
+            <div class="col mb-4">
+                <div class="card" style="width: 30rem;">
+                    <div class="card-body d-flex justify-content-between align-items-center">
+                        <h5 class="card-title">Amazing GOAL by Cristiano!</h5>
+                        <span class="card-title-right">06/10</span> <!-- Texto a la derecha -->
+                    </div>
+                    <img src="https://picsum.photos/400/400" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <strong>
+                            <p class="card-text fs-6">350 Likes</p>
+                        </strong>
+                        <p class="card-text">This is an example of a very good photo that you can post on
+                            instagram.</p>
                     </div>
                 </div>
+            </div>
 
 </body>
 
